--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en" data-bs-theme="auto">
 
 <head>
-    <script src="../assets/js/color-modes.js"></script>
-
+    <script src="js/color-modes.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="nikaose">
     <title>Legion</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/starter-template/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" rel="stylesheet">
 
 </head>
@@ -149,16 +148,15 @@
                 найти ответы на разные вопросы.
                 - [WOS-Giftcode](https://wos-giftcode.centurygame.com/) - Здесь вы можете активировать промокод.
             </aside>
-
-            ---
-
-            *По любым вопросам можете обращаться к* nikaose (S2339).
         </main>
         <footer class="pt-5 my-5 text-body-secondary border-top">
-            Created by the Bootstrap team &middot; &copy; 2024
+            По любым вопросам можете обращаться к nikaose (S2339) &middot; &copy; 2025
         </footer>
     </div>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
 
